# pydra-tasks-ants

./: README.md  pyproject.toml
.github/workflows/: auto-conv.yaml  ci-cd.yaml  release.yml
nipype-auto-conv/: generate  generate.py
nipype-auto-conv/specs/: package.yaml
nipype-auto-conv/specs/classes/: nipype.interfaces.ants.base.Info.yaml
nipype-auto-conv/specs/interfaces/: affine_initializer.yaml  ai.yaml  ants.yaml  ants_introduction.yaml  apply_transforms.yaml  apply_transforms_to_points.yaml  atropos.yaml  average_affine_transform.yaml  average_images.yaml  brain_extraction.yaml  buildtemplateparallel.yaml  compose_multi_transform.yaml  composite_transform_util.yaml  convert_scalar_image_to_rgb.yaml  cortical_thickness.yaml  create_jacobian_determinant_image.yaml  create_tiled_mosaic.yaml  denoise_image.yaml  gen_warp_fields.yaml  image_math.yaml  joint_fusion.yaml  kelly_kapowski.yaml  label_geometry.yaml  laplacian_thickness.yaml  measure_image_similarity.yaml  multiply_images.yaml  n4_bias_field_correction.yaml  registration.yaml  registration_syn_quick.yaml  resample_image_by_spacing.yaml  threshold_image.yaml  warp_image_multi_transform.yaml  warp_time_series_image_multi_transform.yaml
pydra/tasks/ants/: __init__.py
pydra/tasks/ants/autonipype/: __init__.py
pydra/tasks/ants/autonipype/interfaces/: __init__.py
pydra/tasks/ants/autonipype/interfaces/ants/: __init__.py
pydra/tasks/ants/manual/: apply_transforms.py  bias_correction.py  create_jacobian_determinant_image.py  registration.py
pydra/tasks/ants/v2/legacy/: ants_introduction.py  buildtemplateparallel.py
pydra/tasks/ants/v2/legacy/tests/: test_antsintroduction.py  test_buildtemplateparallel.py  test_genwarpfields.py
pydra/tasks/ants/v2/registration/: ants.py  composite_transform_util.py  measure_image_similarity.py  registration.py  registration_syn_quick.py
pydra/tasks/ants/v2/registration/tests/: test_ants.py  test_compositetransformutil.py  test_measureimagesimilarity.py  test_registration.py  test_registrationsynquick.py
pydra/tasks/ants/v2/resampling/: apply_transforms.py  apply_transforms_to_points.py  warp_image_multi_transform.py  warp_time_series_image_multi_transform.py
pydra/tasks/ants/v2/resampling/tests/: test_applytransforms.py  test_applytransformstopoints.py  test_warpimagemultitransform.py  test_warptimeseriesimagemultitransform.py
pydra/tasks/ants/v2/segmentation/: atropos.py  brain_extraction.py  cortical_thickness.py  denoise_image.py  joint_fusion.py  kelly_kapowski.py  laplacian_thickness.py  n4_bias_field_correction.py
pydra/tasks/ants/v2/segmentation/tests/: test_atropos.py  test_brainextraction.py  test_corticalthickness.py  test_denoiseimage.py  test_jointfusion.py  test_kellykapowski.py  test_laplacianthickness.py  test_n4biasfieldcorrection.py
pydra/tasks/ants/v2/utils/: affine_initializer.py  ai.py  average_affine_transform.py  average_images.py  compose_multi_transform.py  create_jacobian_determinant_image.py  image_math.py  label_geometry.py  multiply_images.py  resample_image_by_spacing.py  threshold_image.py
pydra/tasks/ants/v2/utils/tests/: test_affineinitializer.py  test_ai.py  test_averageaffinetransform.py  test_averageimages.py  test_composemultitransform.py  test_createjacobiandeterminantimage.py  test_imagemath.py  test_labelgeometry.py  (+3 more)
pydra/tasks/ants/v2/visualization/: convert_scalar_image_to_rgb.py  create_tiled_mosaic.py
(+68 files in other folders)
